fix: wrong paths in css & html

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 
         lucide.createIcons()
         let spotlights = [
-            "/static/images/shoe1.jpg",
-            "/static/images/shoe2.jpg",
-            "/static/images/shoe3.jpg",
+            "static/images/shoe1.jpg",
+            "static/images/shoe2.jpg",
+            "static/images/shoe3.jpg",
         ]
         let elem = document.getElementById("sp-img")
         setInterval(() => {
