fix: wrong paths & menu

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="badge"></div>
             </div>
             <i icon-name="user"></i>
-            <i icon-name="menu"></i>
+            <i icon-name="menu" id="menu"></i>
         </div>
     </header>
     <section class="spotlight">
