--- a/index.html
+++ b/index.html
@@ -10,8 +10,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛒</text></svg>">
-    <title>Shoop</title>
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛒</text></svg>">
+    <title>Shoop - Clothing & more</title>
+    <meta name="title" content="Shoop - Clothing & more">
+    <meta name="description"
+        content="Shoop is a fictional online store. Buy your favorite brands and clothes. Here. Affordable.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cheetahbyte.github.io/shoop/">
+    <meta property="og:title" content="Shoop - Clothing & more">
+    <meta property="og:description"
+        content="Shoop is a fictional online store. Buy your favorite brands and clothes. Here. Affordable.">
+    <meta property="og:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://cheetahbyte.github.io/shoop/">
+    <meta property="twitter:title" content="Shoop - Clothing & more">
+    <meta property="twitter:description"
+        content="Shoop is a fictional online store. Buy your favorite brands and clothes. Here. Affordable.">
+    <meta property="twitter:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 </head>
 
 <body>
