fix: change metatag image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:description"
         content="Shoop is a fictional online store. Buy your favorite brands and clothes. Here. Affordable.">
     <meta property="og:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+        content="https://images.unsplash.com/photo-1477901492169-d59e6428fc90?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -33,7 +33,7 @@
     <meta property="twitter:description"
         content="Shoop is a fictional online store. Buy your favorite brands and clothes. Here. Affordable.">
     <meta property="twitter:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+        content="https://images.unsplash.com/photo-1477901492169-d59e6428fc90?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
 </head>
 
 <body>
